--- a/pytorch/03_activation_functions.ipynb
+++ b/pytorch/03_activation_functions.ipynb
@@ -204,12 +204,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ![Activation Functions](/Images/act_func.png)\n",
-    "* ![Behaviour of activation functions](/Images/act_behave.svg)"
+    "* ![Activation Functions and their gradients](/Images/act_func.png)"
    ]
   }
  ],
