completed practising coding for the encoder

--- a/transformers/code_transformers.ipynb
+++ b/transformers/code_transformers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -150,10 +150,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.2 Encoder Attention Layers "
+    "### 1.2 Encoder Attention Layers "
    ]
   },
   {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
     }
    ],
    "source": [
-    "x_residuals = x.clone()\n",
+    "x_residual = x.clone()\n",
     "print(x.size())"
    ]
   },
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -292,21 +293,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attention torch.Size([1, 8, 3, 3])\n",
+      "x torch.Size([1, 8, 3, 64])\n"
+     ]
+    }
+   ],
    "source": [
     "d_k = q.size(-1)\n",
     "# compute the scores by multiplying k and q (and normalize)\n",
-    "scores = torch.matmul(k,q.transpose(-2,-1)) / math.sqrt(d_K)\n",
+    "scores = torch.matmul(k,q.transpose(-2,-1)) / math.sqrt(d_k)\n",
     "# Mask out the scores\n",
     "scores = scores.masked_fill(x_mask == 0, -epsilon)\n",
     "# Softmax the scores, ideally creating one score close to 1 and the rest close to 0 \n",
     "# (Note: this won't happen if you look at the numbers because the linear layers haven't \n",
     "# learned anything yet.)\n",
     "attn = F.softmax(scores,dim = -1)\n",
-    "\n"
+    "print(\"attention\",attn.size())\n",
+    "# Apply the scores to v\n",
+    "x = torch.matmul(attn,v)\n",
+    "print(\"x\",x.size())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recombine the multiple attention heads (unfold)\n",
+    "x = x.transpose(1,2).contiguous().view(num_batches, -1, num_heads * (d_embed // num_heads))\n",
+    "print(\"x\",x.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.1.4 Post Self-attention Feed forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff = nn.Linear(d_embed, d_embed)\n",
+    "x = ff(x)\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.1.5 Add residual back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding the residual - This is changing the original embedding values for each token by some delta up or down\n",
+    "x = x_residual + x\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2.2 Feed Forward Module "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of this layer is a stack of hidden states, one for each token. The decoder will be able to look back and attend to the hidden state that will be most useful for decoding by looking just at this stack. To move the matrix toward a hidden state we expand the embeddings, giving the network some capacity, and then collapse it down again to force it to make trade-offs."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.2.1 Set aside residual "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_residual = x.clone()\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.2.2 Pre-Feed_Forward Layer Normalization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = x.mean(-1,keepdim=True)\n",
+    "std = x.std(-1,keepdim=True)\n",
+    "W2 = nn.Parameter(torch.ones(d_embed))\n",
+    "b2 = nn.Parameter(torch.zeros(d_embed))\n",
+    "x = W2 * (x - mean) / (std + epsilon) + b2\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.2.2 Pre-Feed Forward Layer Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The embeddings is grown and compressed again.  This is part of process of transforming the outputs of the self-attention module into a hidden state encoding.\n",
+    "linear_expand = nn.Linear(d_embed, d_ff)\n",
+    "linear_compress = nn.Linear(d_ff, d_embed)\n",
+    "x = linear_compress(F.relu(linear_expand(x)))\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 1.1.2.4 Add residual block back\n",
+    "x = x_residual + x\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Final Encoder layer Normalization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# After repeating the self-attention and feed forward sub-layers for N times, we apply one last layer normalization\n",
+    "mean = x.mean(-1, keepdim=True)\n",
+    "std = x.std(-1, keepdim=True)\n",
+    "Wn = nn.Parameter(torch.ones(d_embed))\n",
+    "bn = nn.Parameter(torch.zeros(d_embed))\n",
+    "x = Wn * (x - mean) / (std + epsilon) + bn\n",
+    "print(x.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, we should have a matrix, stored in x that we can interpret as a stack of hidden states. The Decoder will attempt to attend to this stack and pick out (via softmax emulating argmax) the hidden state that is most helpful in guessing the work that goes in the masked position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The output is the hidden state\n",
+    "hidden = x\n",
+    "print(hidden.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
