--- a/transformers/rough_work.ipynb
+++ b/transformers/rough_work.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,8 @@
      "output_type": "stream",
      "text": [
       "scores torch.Size([1, 8, 3, 3])\n",
-      "torch.Size([1, 8, 3, 3])\n"
+      "attention torch.Size([1, 8, 3, 3])\n",
+      "x torch.Size([1, 8, 3, 64])\n"
      ]
     }
    ],
@@ -257,7 +258,11 @@
     "print(\"scores\", scores.size())\n",
     "# Mask out the scores\n",
     "scores = scores.masked_fill(x_mask == 0, -epsilon)\n",
-    "print(scores.size())"
+    "attn = F.softmax(scores, dim = -1)\n",
+    "print(\"attention\", attn.size())\n",
+    "# Apply the scores to v\n",
+    "x = torch.matmul(attn, v)\n",
+    "print(\"x\", x.size())    "
    ]
   },
   {
